Add 8 new navigation tabs with role-based visibility
- Added Voicemail, Recordings, Contacts, Accounts, Leads, Opportunities, Analytics, and Team tabs
- Implemented role-based visibility (Admin: 14 tabs, Supervisor: 13 tabs, Agent: 10 tabs)
- Created Coming Soon placeholder pages for new tabs
- Added updateTabVisibility() function to dynamically show/hide tabs based on role
- Fixed accessibility issues in Team Alerts and Quick Actions (removed emojis)
- All existing tab content remains untouched

--- a/index.html
+++ b/index.html
@@ -43,32 +43,72 @@
             </div>
 
             <!-- Navigation Tabs -->
-            <div class="slds-context-bar__item slds-is-active">
+            <div class="slds-context-bar__item slds-is-active" data-role-visibility="admin,supervisor,agent">
                 <a href="#" class="slds-context-bar__label-action" data-page="home" id="tab-home">
                     <span class="slds-truncate">Home</span>
                 </a>
             </div>
-            <div class="slds-context-bar__item">
+            <div class="slds-context-bar__item" data-role-visibility="admin,supervisor,agent">
                 <a href="#" class="slds-context-bar__label-action" data-page="calls" id="tab-calls">
                     <span class="slds-truncate">Calls</span>
                 </a>
             </div>
-            <div class="slds-context-bar__item">
+            <div class="slds-context-bar__item" data-role-visibility="admin,supervisor,agent">
                 <a href="#" class="slds-context-bar__label-action" data-page="sms" id="tab-sms">
                     <span class="slds-truncate">SMS</span>
                 </a>
             </div>
-            <div class="slds-context-bar__item">
+            <div class="slds-context-bar__item" data-role-visibility="admin,supervisor,agent">
                 <a href="#" class="slds-context-bar__label-action" data-page="powerdialer" id="tab-powerdialer">
                     <span class="slds-truncate">Powerdialer</span>
                 </a>
             </div>
-            <div class="slds-context-bar__item">
+            <div class="slds-context-bar__item" data-role-visibility="admin,supervisor,agent">
                 <a href="#" class="slds-context-bar__label-action" data-page="reports" id="tab-reports">
                     <span class="slds-truncate">Reports</span>
                 </a>
             </div>
-            <div class="slds-context-bar__item">
+            <div class="slds-context-bar__item" data-role-visibility="admin,supervisor,agent">
+                <a href="#" class="slds-context-bar__label-action" data-page="voicemail" id="tab-voicemail">
+                    <span class="slds-truncate">Voicemail</span>
+                </a>
+            </div>
+            <div class="slds-context-bar__item" data-role-visibility="admin,supervisor,agent">
+                <a href="#" class="slds-context-bar__label-action" data-page="recordings" id="tab-recordings">
+                    <span class="slds-truncate">Recordings</span>
+                </a>
+            </div>
+            <div class="slds-context-bar__item" data-role-visibility="admin,supervisor,agent">
+                <a href="#" class="slds-context-bar__label-action" data-page="contacts" id="tab-contacts">
+                    <span class="slds-truncate">Contacts</span>
+                </a>
+            </div>
+            <div class="slds-context-bar__item" data-role-visibility="admin,supervisor,agent">
+                <a href="#" class="slds-context-bar__label-action" data-page="accounts" id="tab-accounts">
+                    <span class="slds-truncate">Accounts</span>
+                </a>
+            </div>
+            <div class="slds-context-bar__item" data-role-visibility="admin,supervisor,agent">
+                <a href="#" class="slds-context-bar__label-action" data-page="leads" id="tab-leads">
+                    <span class="slds-truncate">Leads</span>
+                </a>
+            </div>
+            <div class="slds-context-bar__item" data-role-visibility="admin,supervisor,agent">
+                <a href="#" class="slds-context-bar__label-action" data-page="opportunities" id="tab-opportunities">
+                    <span class="slds-truncate">Opportunities</span>
+                </a>
+            </div>
+            <div class="slds-context-bar__item" data-role-visibility="admin,supervisor">
+                <a href="#" class="slds-context-bar__label-action" data-page="analytics" id="tab-analytics">
+                    <span class="slds-truncate">Analytics</span>
+                </a>
+            </div>
+            <div class="slds-context-bar__item" data-role-visibility="admin,supervisor">
+                <a href="#" class="slds-context-bar__label-action" data-page="team" id="tab-team">
+                    <span class="slds-truncate">Team</span>
+                </a>
+            </div>
+            <div class="slds-context-bar__item" data-role-visibility="admin">
                 <a href="#" class="slds-context-bar__label-action" data-page="settings" id="tab-settings">
                     <span class="slds-truncate">Settings</span>
                 </a>
