--- a/prototype/index.html
+++ b/prototype/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <title>Dialpad for Salesforce - Launchpad</title>
 
     <!-- SLDS 2 Fonts: Inter and AvantGarde (approximating SLDS 2 typography) -->
